--- a/ci-vars-template.yml
+++ b/ci-vars-template.yml
@@ -5,6 +5,7 @@ parameters:
 variables:
   helmVersion: 3.2.3
   registryServerName: '$(registryName).azurecr.io'
+  dockerRegistryServiceConnectionName: ${{ parameters.dockerRegistryServiceConnectionName }}
   projectName: ${{ parameters.projectName }}
   imageName: ${{ parameters.projectName }}
   imageTag: $(build.buildId)
