--- a/ci-steps-template.yml
+++ b/ci-steps-template.yml
@@ -25,7 +25,7 @@ steps:
     helmVersionToInstall: $(helmVersion)
 - bash: |
     echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
-    cd $(projectName)
+    cd $(projectName)/charts/$(projectName)/
     helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) ./$(projectName) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
     helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
