--- a/ci-vars-template.yml
+++ b/ci-vars-template.yml
@@ -11,5 +11,5 @@ variables:
   imageName: ${{ parameters.projectName }}
   imageTag: $(build.buildId)
   helmChartVersion: $(build.buildId)
-  helmfrom: $(Build.SourcesDirectory)/$(projectName)/charts/$(projectName)
-  helmto: $(Build.ArtifactStagingDirectory)/$(projectName)/charts/$(projectName)
+  helmfrom: $(Build.SourcesDirectory)/deploy/k8s/$(projectName)
+  helmto: $(Build.ArtifactStagingDirectory)/$(projectName)/deploy/k8s/$(projectName)
