--- a/ci-vars-template.yml
+++ b/ci-vars-template.yml
@@ -1,5 +1,6 @@
 parameters:
   projectName: ''
+  # dockerRegistryServiceConnectionName: ''
 
 variables:
   helmVersion: 3.2.3
@@ -8,3 +9,4 @@ variables:
   imageName: ${{ parameters.projectName }}
   imageTag: $(build.buildId)
   helmChartVersion: $(build.buildId)
+  # dockerRegistryServiceConnectionName: ${{ parameters.dockerRegistryServiceConnectionName }}
