--- a/ci-steps-template.yml
+++ b/ci-steps-template.yml
@@ -39,7 +39,7 @@ steps:
         -p '$(registryPassword)' \
         $chartPackage
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
-  failOnStderr: false
+  failOnStderr: true
   name: helmPush
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
   displayName: 'az acr helm push'
