--- a/ci-steps-template.yml
+++ b/ci-steps-template.yml
@@ -31,10 +31,9 @@ steps:
   failOnStderr: true
   displayName: 'helm package'
 - bash: |
-    echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
     cd $(projectName)
     chartPackage=$(ls $(projectName)-$(helmChartVersion).tgz)
-    helm chart push \
+    az acr \
         -n $(registryName) \
         -u $(registryLogin) \
         -p $(registryPassword) \
