--- a/templates/ci/ci-steps-template.yml
+++ b/templates/ci/ci-steps-template.yml
@@ -40,7 +40,7 @@ steps:
         -p $(registryPassword) \
         $chartPackage
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
-  failOnStderr: true
+  failOnStderr: false
   name: helmPush
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
   displayName: 'az acr helm push'
