--- a/templates/cicd/ci-steps-template.yml
+++ b/templates/cicd/ci-steps-template.yml
@@ -10,50 +10,47 @@ steps:
     buildContext: $(buildContext)
     tags: |
       $(imageTag)
-stages:
-  - stage: ci
-    displayName: CI
-    jobs:
-      # Download template helm
-      - job: helm_publish_acr
-        displayName: helm chart publish
-        steps:
-        - checkout: templates
-          displayName: download chart
 
-        # Listar
-        - script: |
-            ls $(build.sourcesdirectory)/templates/helm
-          displayName: list contents
+# Download template helm
+- task: helm_publish_acr@2
+  displayName: helm chart publish
+  steps:
+  - checkout: templates
+    displayName: download chart
 
-        # Instala o cliente Helm
-        - task: HelmInstaller@1
-          displayName: "install helm"
-          inputs:
-            helmVersionToInstall: $(helmVersion)
-        # Autenticar no ACR
-        - script: |
-            echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
-          failOnStderr: true
-          displayName: "login to acr using helm" 
+# Listar
+- script: |
+    ls $(build.sourcesdirectory)/templates/helm
+  displayName: list contents
 
-        # Cria e envia o gráfico do Helm para o ACR.
-        - script: |
-            helm chart save $(build.sourcesdirectory)/helm/charts/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
-          failOnStderr: true
-          displayName: "save the chart and set the alias"
+# Instala o cliente Helm
+- task: HelmInstaller@1
+  displayName: "install helm"
+  inputs:
+    helmVersionToInstall: $(helmVersion)
+# Autenticar no ACR
+- script: |
+    echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
+  failOnStderr: true
+  displayName: "login to acr using helm" 
 
-        # Cria variables.json que contém a versão do gráfico do Helm recém-criada. Que usaremos para obter a versão correta do gráfico durante o CD.
-        - script: |
-            helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
-            echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
-          failOnStderr: true
-          displayName: "push the chart to acr"
+# Cria e envia o gráfico do Helm para o ACR.
+- script: |
+    helm chart save $(build.sourcesdirectory)/helm/charts/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+  failOnStderr: true
+  displayName: "save the chart and set the alias"
 
-        # Copie alguns arquivos adicionais para o artefato. Que podemos usar para substituir os valores do gráfico do Helm.
-        - task: CopyFiles@2
-          inputs:
-            sourceFolder: $(helmfrom)
-            targetFolder: $(helmto)
-        - publish: $(build.artifactStagingDirectory)
-          artifact: build-artifact
+# Cria variables.json que contém a versão do gráfico do Helm recém-criada. Que usaremos para obter a versão correta do gráfico durante o CD.
+- script: |
+    helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
+    echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
+  failOnStderr: true
+  displayName: "push the chart to acr"
+
+# Copie alguns arquivos adicionais para o artefato. Que podemos usar para substituir os valores do gráfico do Helm.
+- task: CopyFiles@2
+  inputs:
+    sourceFolder: $(helmfrom)
+    targetFolder: $(helmto)
+- publish: $(build.artifactStagingDirectory)
+  artifact: build-artifact
