--- a/templates/cicd/ci-steps-template.yml
+++ b/templates/cicd/ci-steps-template.yml
@@ -11,6 +11,9 @@ steps:
     tags: |
       $(imageTag)
 
+- checkout: self
+  displayName: download chart
+  
 # list contents
 - script: |
     ls $(build.sourcesdirectory)/helm/charts
