--- a/templates/cicd/ci-steps-template.yml
+++ b/templates/cicd/ci-steps-template.yml
@@ -13,7 +13,7 @@ steps:
 
 # list contents
 - script: |
-    ls $(build.sourcesdirectory)/helm/charts
+    ls $(build.sourcesdirectory)/templates/helm/charts
   displayName: list contents
 
 # Instala o cliente Helm
