--- a/templates/java/ci-vars-template.yml
+++ b/templates/java/ci-vars-template.yml
@@ -13,7 +13,7 @@ variables:
   buildContext: ${{ parameters.buildContext }}
   projectName: ${{ parameters.projectName }}
   imageName: ${{ parameters.projectName }}
-  imageTag: $(build.buildId)
-  helmChartVersion: $(build.buildId)
+  imageTag: $(build.sourceBranchName)
+  helmChartVersion: $(build.sourceBranchName)
   helmfrom: $(Build.SourcesDirectory)/$(projectName)
   helmto: $(Build.ArtifactStagingDirectory)/$(projectName)
