--- a/templates/java/ci-steps-template.yml
+++ b/templates/java/ci-steps-template.yml
@@ -1,4 +1,16 @@
 steps:
+# Execução do projeto Java e testes com Apache Maven.
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'package'
+
 # Docker login
 - task: Docker@2
   displayName: dockerLogin
