--- a/templates/dotnet/ci-vars-template.yml
+++ b/templates/dotnet/ci-vars-template.yml
@@ -15,5 +15,5 @@ variables:
   imageName: ${{ parameters.projectName }}
   imageTag: $(build.buildId)
   helmChartVersion: $(build.buildId)
-  helmfrom: $(Build.SourcesDirectory)/charts
-  helmto: $(Build.ArtifactStagingDirectory)/charts
+  helmfrom: $(Build.SourcesDirectory)
+  helmto: $(Build.ArtifactStagingDirectory)
