--- a/templates/dotnet/ci-steps-template.yml
+++ b/templates/dotnet/ci-steps-template.yml
@@ -40,7 +40,7 @@ steps:
 
 # Cria e envia o gráfico do Helm para o ACR.
 - script: |
-    helm chart save $(build.sourcesdirectory)/charts/$(projectName)/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+    helm chart save $(build.sourcesdirectory)/$(chartHelmFile)/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
   failOnStderr: true
   displayName: "save the chart and set the alias"
 
