--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -15,10 +15,12 @@ steps:
     az aks get-credentials \
         -n $(aks) \
         -g $(rg)
-    echo $(registryPassword) | helm registry login $(registryName) --username $(registryLogin) --password-stdin
+    helm repo add \
+        $(registryName) \
+        https://$(registryServerName)/charts/$(projectName) \
+        --username $(registryLogin) \
+        --password '$(registryPassword)'
     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
-    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
     helm upgrade \
         --namespace $(k8sNamespace) \
         --create-namespace \
