--- a/templates/java/cd-vars-template.yml
+++ b/templates/java/cd-vars-template.yml
@@ -3,5 +3,6 @@ parameters:
 
 variables:
   helmVersion: 3.2.3
+  HELM_EXPERIMENTAL_OCI: 1
   registryServerName: '$(registryName).azurecr.io'
   projectName: ${{ parameters.projectName }}
