--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -17,8 +17,8 @@ steps:
         -g $(rg)
     echo $(registryPassword) | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
        helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-       helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
-       helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+       helm chart pull $(registryServerName)/charts/$(projectName):$imageTag
+       helm chart export $(registryServerName)/charts/$(projectName):$imageTag --destination $(pipeline.workspace)/install
        helm upgrade \
     helm upgrade \
         --namespace $(k8sNamespace) \
