--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -9,6 +9,9 @@ steps:
 - script: |
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
   displayName: login to acr using helm
+- script: |
+    helm chart pull $(registryServerName)/charts/$(projectName):$(imageTag)
+  displayName: get helm chart on agent
 # - bash: |
 #    az login \
 #         --service-principal \
