--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -10,7 +10,7 @@ steps:
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
   displayName: login to acr using helm
 - script: |
-    helm chart pull $(registryServerName)/charts/$(projectName):$(imageTag)
+    helm chart pull $(registryServerName)/charts/$(projectName):latest
   displayName: get helm chart on agent
 # - bash: |
 #    az login \
