--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -21,29 +21,28 @@ steps:
   displayName: export the chart to folder
 
 - script: |
-    az login \
-        --service-principal \
-        -u $(aksSpId) \
-        -p '$(aksSpSecret)' \
-        --tenant $(aksSpTenantId)
-    az aks get-credentials \
-        -n $(aks) \
-        -g $(rg)
+    az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+    az aks get-credentials -n $(aks) -g $(rg)
+  displayName: login aks
+
+  - script: |
+    az aks get-credentials -n $(aks) -g $(rg)
+  displayName: get credentials
 
 # Implantar o gráfico para AKS
-- task: HelmDeploy@0
-  displayName: deploy chart to aks
-  inputs:
+# - task: HelmDeploy@0
+#   displayName: deploy chart to aks
+#   inputs:
     # connectionType: 'Azure Resource Manager'
     # azureSubscription: '$(azure.service.connection)'
     # azureResourceGroup: 'demos'
     # kubernetesCluster: 'aksdemoutkarsh'
     # namespace: 'helmdemo'
-    command: 'upgrade'
-    chartType: 'FilePath'
-    chartPath: '$(build.stagingdirectory)'
-    releaseName: 'helmdemo'
-    arguments: '--create-namespace --install'
+    # command: 'upgrade'
+    # chartType: 'FilePath'
+    # chartPath: '$(build.stagingdirectory)'
+    # releaseName: 'helmdemo'
+    # arguments: '--create-namespace --install'
 
 
 # - bash: |
