--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -50,7 +50,7 @@ steps:
   displayName: deploy chart to aks
   inputs:
     connectionType: 'Azure Resource Manager'
-    azureSubscription: '$(azure.service.connection)'
+    azureSubscription: 'aks-connection'
     azureResourceGroup: $(rg)
     kubernetesCluster: $(aks)
     namespace: 'helmdemo'
