--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -57,7 +57,7 @@ steps:
     command: 'upgrade'
     chartType: 'FilePath'
     chartPath: '$(build.stagingdirectory)'
-    releaseName: 'helmdemo'
+    releaseName: '$(projectName)'
     arguments: '--create-namespace --install'
 
 
