--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -31,36 +31,36 @@ steps:
   displayName: get credentials
 
 # Deploy no aks
-# - script: |
-#     helm upgrade \
-#       --namespace $(k8sNamespace) \
-#       --create-namespace \
-#       --install \
-#       --wait \
-#       --version $helmChartVersion \
-#       --set image.repository=$(registryServerName)/$(projectName) \
-#       --set ingress.enabled=false \
-#       $(projectName) \
-#       $(registryName)/$(projectName)
-#   failOnStderr: true
-#   displayName: 'deploy helm chart'
+- script: |
+    helm upgrade \
+      --namespace $(k8sNamespace) \
+      --create-namespace \
+      --install \
+      --wait \
+      --version $helmChartVersion \
+      --set image.repository=$(registryServerName)/$(projectName) \
+      --set ingress.enabled=false \
+      $(projectName) \
+      $(registryName)/$(projectName)
+  failOnStderr: true
+  displayName: 'deploy helm chart'
 
 # Implantar o gráfico para AKS
-- task: HelmDeploy@0
-  displayName: deploy chart to aks
-  inputs:
-    connectionType: 'Azure Resource Manager'
-    azureSubscription: 'aks-connection-cluster-prod'
-    azureResourceGroup: '$(rg)'
-    kubernetesCluster: '$(aks)'
-    namespace: '$(k8sNamespace)'
-    command: 'upgrade'
-    chartType: 'FilePath'
-    chartPath: '$(build.stagingdirectory)'
-    releaseName: '$(build.stagingdirectory)/$(registryServerName)/charts/$(projectName):latest'
-    install: true
-    waitForExecution: false
-    arguments: '--create-namespace --install'
+# - task: HelmDeploy@0
+#   displayName: deploy chart to aks
+#   inputs:
+#     connectionType: 'Azure Resource Manager'
+#     azureSubscription: 'aks-connection-cluster-prod'
+#     azureResourceGroup: '$(rg)'
+#     kubernetesCluster: '$(aks)'
+#     namespace: '$(k8sNamespace)'
+#     command: 'upgrade'
+#     chartType: 'FilePath'
+#     chartPath: '$(build.stagingdirectory)'
+#     releaseName: '$(build.stagingdirectory)/$(registryServerName)/charts/$(projectName):latest'
+#     install: true
+#     waitForExecution: false
+#     arguments: '--create-namespace --install'
 
 
 # - bash: |
