--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -10,20 +10,22 @@ steps:
   artifact: build-artifact
 
 # Login no registry
-- script: |
-    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
-  displayName: login to acr using helm
+# - script: |
+#     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+#   displayName: login to acr using helm
 
 # Puxar a versão mais recente do gráfico do ACR para o agente
 - script: |
+    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
   displayName: get helm chart on agent
 
 # Extrair o gráfico em uma pasta
-- script: |
-    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
-  displayName: export the chart to folder
+# - script: |
+#     helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+#   displayName: export the chart to folder
 
 # Login no AKS
 - script: |
