--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -15,12 +15,10 @@ steps:
 #   displayName: login to acr using helm
 
 # Puxar a versão mais recente do gráfico do ACR para o agente
-- script: |
-    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
-    helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
-    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
-  displayName: get helm chart on agent
+# - script: |
+#     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
+#     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+#   displayName: get helm chart on agent
 
 # Extrair o gráfico em uma pasta
 # - script: |
@@ -28,17 +26,23 @@ steps:
 #   displayName: export the chart to folder
 
 # Login no AKS
-- script: |
-    az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
-  displayName: login aks
+# - script: |
+#     az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+#   displayName: login aks
 
 # Get credentials aks
-- script: |
-    az aks get-credentials -n $(aks) -g $(rg)
-  displayName: get credentials
+# - script: |
+#     az aks get-credentials -n $(aks) -g $(rg)
+#   displayName: get credentials
 
 # Deploy no aks
 - script: |
+    az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+    az aks get-credentials -n $(aks) -g $(rg)
+    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+    helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
+    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
     helm upgrade \
       --namespace $(k8sNamespace) \
       --create-namespace \
