--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -54,7 +54,7 @@ steps:
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.ymal \
       $(projectName) \
-      $(registryName)/$(projectName)
+      $(pipeline.workspace)/install/$(projectName)
   failOnStderr: true
   displayName: 'deploy helm chart'
 
