--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -52,7 +52,7 @@ steps:
       --set image.repository=$(registryServerName)/$(projectName) \
       --set ingress.enabled=false \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
-      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.ymal \
+      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
       $(projectName) \
       $(pipeline.workspace)/install/$(projectName)
   failOnStderr: true
