--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -48,6 +48,7 @@ steps:
       --create-namespace \
       --install \
       --wait \
+      --name $(projectName)
       --version $helmChartVersion \
       --set image.repository=$(registryServerName)/$(projectName) \
       --set ingress.enabled=false \
