--- a/templates/java/ci-steps-template.yml
+++ b/templates/java/ci-steps-template.yml
@@ -57,24 +57,33 @@ steps:
   displayName: "install helm"
   inputs:
     helmVersionToInstall: $(helmVersion)
-# Autenticar no ACR
 - script: |
     echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
-  failOnStderr: true
-  displayName: "login to acr using helm" 
-
-# Cria e envia o gráfico do Helm para o ACR.
-- script: |
-    helm chart save $(build.sourcesdirectory)/$(chartHelmFile)/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
-  failOnStderr: true
-  displayName: "save the chart and set the alias"
-
-# Cria variables.json que contém a versão do gráfico do Helm recém-criada. Que usaremos para obter a versão correta do gráfico durante o CD.
-- script: |
-    helm chart push $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+    cd deploy/k8s/helm/
+    helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) ./$(projectName) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+    helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
   failOnStderr: true
-  displayName: "push the chart to acr"
+  displayName: "helm package"
+  
+# # Autenticar no ACR
+# - script: |
+#     echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
+#   failOnStderr: true
+#   displayName: "login to acr using helm" 
+
+# # Cria e envia o gráfico do Helm para o ACR.
+# - script: |
+#     helm chart save $(build.sourcesdirectory)/$(chartHelmFile)/ $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+#   failOnStderr: true
+#   displayName: "save the chart and set the alias"
+
+# # Cria variables.json que contém a versão do gráfico do Helm recém-criada. Que usaremos para obter a versão correta do gráfico durante o CD.
+# - script: |
+#     helm chart push $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+#     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
+#   failOnStderr: true
+#   displayName: "push the chart to acr"
 
 # Copie alguns arquivos adicionais para o artefato. Que podemos usar para substituir os valores do gráfico do Helm.
 - task: CopyFiles@2
