--- a/templates/java/ci-vars-template.yml
+++ b/templates/java/ci-vars-template.yml
@@ -14,8 +14,8 @@ variables:
   buildContext: ${{ parameters.buildContext }}
   projectName: ${{ parameters.projectName }}
   imageName: ${{ parameters.projectName }}
-  imageTag: $(Build.BuildNumber)
-  helmChartVersion: $(Build.BuildNumber)
+  imageTag: $(build.sourceBranchName)
+  helmChartVersion: $(build.sourceBranchName)
   helmfrom: $(Build.SourcesDirectory)
   helmto: $(Build.ArtifactStagingDirectory)
   chartHelmFile: ${{ parameters.chartHelmFile }}
