--- a/templates/java/ci-steps-template.yml
+++ b/templates/java/ci-steps-template.yml
@@ -59,8 +59,7 @@ steps:
     helmVersionToInstall: $(helmVersion)
 - script: |
     echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
-    cd $(chartHelmFile)/
-    helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
+    helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) ./$(chartHelmFile) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName):$(imageTag)
     helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
   failOnStderr: true
