--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -41,20 +41,20 @@ steps:
     az aks get-credentials -n $(aks) -g $(rg)
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-    helm chart pull $(registryServerName)/charts/$(projectName)
-    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
-    helm upgrade \
-      --namespace $(k8sNamespace) \
-      --create-namespace \
-      --install \
-      --wait \
-      --version $helmChartVersion \
-      --set image.repository=$(registryServerName)/$(projectName) \
-      --set ingress.enabled=false \
-      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
-      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
-      $(projectName) \
-      $(pipeline.workspace)/install/$(projectName)
+  # helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+  # helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+  # helm upgrade \
+  #   --namespace $(k8sNamespace) \
+  #   --create-namespace \
+  #   --install \
+  #   --wait \
+  #   --version $helmChartVersion \
+  #   --set image.repository=$(registryServerName)/$(projectName) \
+  #   --set ingress.enabled=false \
+  #   -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
+  #   -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
+  #   $(projectName) \
+  #   $(pipeline.workspace)/install/$(projectName)
   failOnStderr: true
   displayName: 'deploy helm chart'
 
