--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -41,7 +41,7 @@ steps:
     az aks get-credentials -n $(aks) -g $(rg)
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-  # helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
   # helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
   # helm upgrade \
   #   --namespace $(k8sNamespace) \
